changes/5.10/2a410d09417b5344ab1f3cf001ac73a1daf8dcce
ARM/ixp4xx: add a missing include of dma-map-ops.h

Compilation of ixp4xx_defconfig fails with:

arch/arm/mach-ixp4xx/common.c: In function 'ixp4xx_platform_notify_remove':
arch/arm/mach-ixp4xx/common.c:291:3: error: implicit declaration of function 'dmabounce_unregister_dev' [-Werror=implicit-function-declaration]
  291 |   dmabounce_unregister_dev(dev);
      |   ^~~~~~~~~~~~~~~~~~~~~~~~
arch/arm/mach-ixp4xx/common.c: In function 'ixp4xx_platform_notify':
arch/arm/mach-ixp4xx/common.c:307:3: error: implicit declaration of function 'dmabounce_register_dev' [-Werror=implicit-function-declaration]
   307 |   dmabounce_register_dev(dev, 2048, 4096, ixp4xx_needs_bounce);

Add a missing include that is needed because of the header reshuffle.

Fixes: 0a0f0d8be76d ("dma-mapping: split <linux/dma-mapping.h>")
Reported-by: Guenter Roeck <linux@roeck-us.net>
Signed-off-by: Christoph Hellwig <hch@lst.de>

